# fudds-grimoire

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.data/: tables.yml
.github/: copilot-instructions.md
.schemas/: items.schema.json  loot-table.schema.json
src/grimoire/: __init__.py  app.py  main.py  utils.py
src/grimoire/loaders/: __init__.py  items.py  resolver.py  tables.py
src/grimoire/models/: __init__.py  constants.py  item.py  roller.py
src/grimoire/models/data/: __init__.py  armor.py  base.py  consumable.py  currency.py  weapon.py  wondrous.py
src/grimoire/ui/: __init__.py  add_item.py  constants.py  roll_item.py  screens.py  utils.py
src/grimoire/ui/forms/: __init__.py  collectors.py
src/grimoire/ui/screens/: __init__.py  add_item.py  main_menu.py  placeholder.py  roll_item.py  roll_table.py
src/grimoire/ui/widgets/: __init__.py  form_field_row.py  item_card.py
tests/: test_add_item_screen.py  test_app.py  test_item_loader.py  test_item_model.py  test_main.py  test_roll_item_screen.py  test_roll_table_roller.py  test_roll_table_screen.py  test_roller.py  test_table_loader.py
